--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Risk of Rain 2 Items</title>
-<link rel="stylesheet" href="/css/ror2.css" />
-<script type="text/javascript" src="/js/ror2/main.js"></script>
-<script type="text/javascript" src="/js/ror2/items.js"></script>
-<script type="text/javascript" src="/js/ror2/config.js"></script>
+<link rel="stylesheet" href="css/ror2.css" />
+<script type="text/javascript" src="js/ror2/main.js"></script>
+<script type="text/javascript" src="js/ror2/items.js"></script>
+<script type="text/javascript" src="js/ror2/config.js"></script>
 </head>
 <body>
 <div id="ror2"></div>
